--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
                 <div class="button_select" id="select_appareil">
                   <span>
                     <input type="text" class="search_and_select_buttons" id="search_appliances" placeholder="Appareil">
-                    <i class="bi bi-chevron-down icon_btn"></i>
+                    <i class="bi bi-chevron-down icon_btn" id="load_appliances"></i>
                   </span>
                     <ul class="advance_search_results" id="search_and_select_appareil_results"></ul>
                 </div>
                 
-                <div class="button_select" id="select_unstensils">
+                <div class="button_select" id="select_ustensils">
                   <span>
                   <input type="text" class="search_and_select_buttons" id="search_ustensils" placeholder="Ustensils" >
-                  <i class="bi bi-chevron-down icon_btn" ></i>
+                  <i class="bi bi-chevron-down icon_btn" id="load_ustensils" ></i>
                 </span>
                   <ul class="advance_search_results" id="search_and_select_ustensils_results"></ul>
               </div>
