scenario 1 and 2 test version completed
-scenario 1 et 2 fonctionnel sur index_test.js

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="button_select" id="select_ustensils">
                   <span>
                   <input type="text" class="search_and_select_buttons" id="search_ustensils" placeholder="Ustensils" >
-                  <i class="bi bi-chevron-down icon_btn" id="load_ustensils" ></i>
+                  <i class="bi bi-chevron-down icon_btn" id="load_ustensils"></i>
                 </span>
                   <ul class="advance_search_results" id="search_and_select_ustensils_results"></ul>
               </div>
@@ -66,7 +66,7 @@
               </div>
             
             </main>
-        <script src="index.js"></script>
+        <script src="index_test.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
