--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <main class="container">
       <div class="row">
-        <div class="input-group mb-3">
+        <div class="input-group mb-3" id="groupe_barre_de_recherche">
           <input
             type="search"
             id="search_bar"
